--- a/package.json
+++ b/package.json
@@ -4,18 +4,23 @@
   "private": true,
   "dependencies": {
     "@headlessui/react": "^1.7.7",
+    "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.2.1",
     "daisyui": "^2.45.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.41.1",
     "react-icons": "^4.7.1",
     "react-phone-number-input": "^3.2.13",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
     "sort-by": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
