--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
     "daisyui": "^2.45.0",
+    "force": "^0.0.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
@@ -18,6 +19,7 @@
     "react-hook-form": "^7.41.1",
     "react-icons": "^4.7.1",
     "react-phone-number-input": "^3.2.13",
+    "react-query": "^3.39.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
